--- a/apps/web/styles/global.css
+++ b/apps/web/styles/global.css
@@ -1,8 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --primary: #ffff33;
+}
+
 body {
-  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica",
-    "Arial", sans-serif;
-  display: flex;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
+  font-family: "Poppins", "Helvetica Neue", "SF Pro Text", "SF Pro Icons",
+    "Helvetica", "Arial", sans-serif;
+  background-color: #002642;
+  color: #f1f5f9;
 }
